syntax = "proto3";

package ai.metathings.service.sensor;

import "google/protobuf/wrappers.proto";
import "google/protobuf/any.proto";

enum SensorState {
	SENSOR_STATE_UNKNOWN = 0;
	SENSOR_STATE_ON = 1;
	SENSOR_STATE_OFF = 2;
}

message SensorValue {
	oneof value {
		double double = 1;
		float float = 2;
		int64 int64 = 3;
		uint64 uint64 = 4;
		int32 int32 = 5;
		uint32 uint32 = 6;
		bool bool = 7;
		string string = 8;
	}
}

message SensorData {
	map<string, SensorValue> data = 1;
}

message Sensor {
	string name = 1;
	SensorState state = 2;
	map<string, SensorValue> config = 3;
}
